// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import import-default.ts 1`] = `
ProjectParseResult {
  entryModule: import/import-default.ts,
  modules: Map {
    import/import-default.ts => ModuleParseResult {
      imports: Array [
        ImportParseResult {
          documentation: ,
          documentationTags: Array [],
          id: Anonymous,
          imports: Array [
            Object {
              id: default,
              importedId: ts,
              modulePath: import/import-named,
            },
          ],
        },
      ],
      modulePath: import/import-default.ts,
      nodes: Array [],
      reexports: Array [],
    },
    import/import-named => ModuleParseResult {
      imports: Array [
        ImportParseResult {
          documentation: ,
          documentationTags: Array [],
          id: Anonymous,
          imports: Array [],
        },
      ],
      modulePath: import/import-named,
      nodes: Array [],
      reexports: Array [],
    },
  },
}
`;

exports[`import import-named.ts 1`] = `
ProjectParseResult {
  entryModule: import/import-named.ts,
  modules: Map {
    import/import-named.ts => ModuleParseResult {
      imports: Array [
        ImportParseResult {
          documentation: ,
          documentationTags: Array [],
          id: Anonymous,
          imports: Array [],
        },
      ],
      modulePath: import/import-named.ts,
      nodes: Array [],
      reexports: Array [],
    },
  },
}
`;
